chapter12/deploy-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gracehttp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gracehttp
spec:
  hosts:
  - "*"
  gateways:
  - gracehttp-gateway
  http:
  - match:
    - uri:
        exact: /hello
    route:
    - destination:
        host: grace
        port:
          number: 80
